lab1/Test/L1-A-6-79.output
Error Type B at Line 1
Error Type B at Line 6
Error Type B at Line 23
Error Type A at Line 28
Error Type B at Line 32
Error Type B at Line 41
Error Type B at Line 41
Error Type B at Line 42
Error Type B at Line 46
Error Type B at Line 47
Error Type A at Line 50
Error Type B at Line 51
