lab1/Test/L1-A-6-79.cmm
float KuViPHsBvRW struct Y0BuhYIFcSuWU {
}j5N4DvXmX0Ax_ [ 502626465 ] [ 1341581874 ] ) {
  int NTBeoLaVbFJcI , mbfKc7hwVh08GH2QkN [ 1648679669 
    ] = ! ! dG ( ) / - VwZaFoyR5mPX / ! WY82JXyZWKSwDUdsKsMJ 
    / ! kGBwWv6Dl / ! vZIqbo3N3eR0 * - ncu == Dmg7XKGlpjxs 
    ( G0EW1vdyHnRO ) [ tsB9 ] L3uHmkujBdJFqMGIzSQ ] / 
    g * mjgz + OY9rVCepfcuX + MS + HrdhID8wA >= - HPmvRB7DYHQ8gUl 
    - v3Z8 >= - bkMdnUxcqo * V / AeK0IJNauZKz48 + je2fjuZ 
    + CoKhhyNwTZl && ! JslWb * Vm0pNLjDuhC > GW78Cvks4MWUuoXcYCgw 
    < EO4D < fJSeJBVo < GG1U || ! ebdiT / fCqz + yorRqsapagNyaW 
    - vhYuOz3PO3bSS - BC4nKedu9Tgzy5l + W8UbYkjHMKdpcwg 
    + D_ik_X7SWC - uHOEv1Wb != C2bF9ewr5r1B != GSC2KHGN 
    > fmf <= vG23 >= gnL4hOdGlm2wUhf1u == ehnXgsQ7vJE4iWb 
    > gwb3flBHjxn != KRC4IK8e8f53e2HKKui7 || ( mW ) - 
    SpE63keHBi1499QIUYJ < iBnZPzL5b > V3iXIU < imkqoXrMoZ_RHNHPRiQt 
    > UObN5Sn_YtROz <= GV_ < Bv3UnbbPbAC < iMBxqX5JsRN3gf1 
    <= VeMAF8UdaIY32huBcB_G >= NBmVWBjRyJ <= swBL7 >= 
    DjoYgQBxtLcZ < EQFm4JMHqNS_IvYrxoz7 && jWdRkYl8C || 
    2088618573 [ XaofCPSblM ] . Q && hZBDAJv4g && BEYqCCPLH3 
    ;
  int Ierz8H28eMi2GK ;
  float Q4Coy2wbKfTjOc = ! - ! hwsfNM8VkA3q3qFaJ / 
    ettmrksAEAk ( ) * - * gkwkXltJe40PRHtv ( URPPz0oIcJdojP8ef8 
    ) - ! mDb_bmEfP1j / yVmKjmxGo * SgJz3r2KnPeCAekbEIUo 
    && yWbUMAyTV1xOyhU ( uY ) . fBUHk_V > zFD2AQhvGO5H 
    ;
  float _nr41JLdjmHia7jxW = - ! MxWMX879lUP = Q_Bb 
    , R9PrR [ 1543979882 ] , wo7cMAwbJBozpxpo ~;
{
  }{
    while ( ! - QUftPOxFtAjhp20j0b * R68nsOTalD0iC 
      / f279_3M_pVPh5Je_SePY * / e7 * syl_2n594la_ - QBr 
      + Ad79Xt1xjJqDdx + DtHjDoXId_HwfCJYFei - sj6oVVw3L 
      - D7pTeG + UKL0jj1H_vD_qjSQh_e + TB2Fp94DhtMK + q4 
      + VD1qVCWGKLbARD7 >= Ztpc5y0hA < tfsLGYi0G2iEIvF >= 
      CPlZmcAfb == VKb < fJsEl9iBGKvUVr8S == H8o98hGv8uWKj1sK3 
      <= newwi7zFOURsHC >= _b2Iz3ZBMZ > n <= h3gMfxRvoQYY 
      > rFK87aEqf56UzateTaRh == uEgKSUUOzOuJrh8mtg >= Bf 
      )     bk6R6TkO_A6lkgL5 ;

    if ( - sUlBYjierVL2R5yLb = )     if ( bHO8 else 
      )     wJcC8zWLnG2hdaTt float ;


    while ( cP0Vu3IiOrj3oHy259VI )     IBSGyOOGOC 
      ;[ 
< 
    if ( M )     A_ZVUds6xF ;

&  }}
) 